# SDEngine

./: .gitignore  .gitingore  0001-add-Add-Something.patch  LICENSE  README.md  SDEngine.sln
Doc/Doxygen/: DoxygenGenerator.bat  SDEReadMe.txt  SDEngine.cfg
Doc/Note/Design/: ApplicationLifeCycle.pptx  EngineDesign.docx  EngineDesign.pptx
Doc/Note/Vulkan/: Vulkan-DeviceMemory.docx  Vulkan-Photo.pptx  Vulkan-RenderingFlow.odt  Vulkan-Synchronization.docx  VulkanRenderFlowPhoto.odg
LibraryProject/Android/: SDEngine.vcxproj  SDEngine.vcxproj.filters
LibraryProject/Android/SDEngine/: SDEngine.vcxproj
LibraryProject/Android/SDEngine_AndroidApplication/: SDEngine_AndroidApplication.vcxproj  SDEngine_AndroidApplication.vcxproj.filters
LibraryProject/SDEngine/: SDEngine.vcxitems  SDEngine.vcxitems.filters
LibraryProject/Windows/SDEngine/: SDEngine.vcxproj  SDEngine.vcxproj.filters
LibraryProject/Windows/SDEngine_GLFWApplication/: GLFWApplication_Callback.cpp  GLFWApplication_MainLoop.cpp  SDEngine_GLFWApplication.vcxproj  SDEngine_GLFWApplication.vcxproj.filters
PropSheet/: SDEngine.props  SDThirdParty_DevIL.props  SDThirdParty_GLEW.props  SDThirdParty_GLFW.props  SDThirdParty_ImGui.props  SDThirdParty_Json.props  SDThirdParty_OpenXR.props  SDThirdParty_StbImage.props  SDThridParty_Assimp.props  SDThridParty_Vulkan.props  Vulkan.props
Scripts/: CopyAndroidLibs.bat
SourceCode/include/: SDEngine.h  SDEngineCommonFunction.h  SDEngineCommonType.h  SDEngineMacro.h  SDEnginePlatform.h  SDEngineTemplates.h
SourceCode/include/Application/: GLFWApplication.h
SourceCode/include/Application/Android/: AndroidApplication.h  AndroidEnvAttacher.h  AndroidOpenXRApplication.h  AppStateEnum.h
SourceCode/include/GUI/: IMGUIBatch.h  IMGUIButton.h  IMGUINode.h  IMGUIRenderer.h  IMGUITextLabel.h  IMGUIVectorLabel.h  IMGUIWindow.h
SourceCode/include/Math/: MathAlgoritm.h  MathConstant.h  Matrix4X4f.h  Quaternion.h  Transform.h  Vector3f.h
SourceCode/include/OpenXR/: OpenXRAPIManager.h  OpenXRApplication.h  OpenXRConfig.h  OpenXRGraphicsSystem.h  OpenXRSpaceComponent.h  OpenXRSwapchain.h  OpenXRViewSpaceComponent.h  OpenXRVulkanManager.h
SourceCode/src/: SDEngineCommonFunction.cpp
SourceCode/src/Application/: GLFWApplication.cpp
SourceCode/src/GUI/: IMGUIBatch.cpp  IMGUIButton.cpp  IMGUINode.cpp  IMGUIRenderer.cpp  IMGUITextLabel.cpp  IMGUIVectorLabel.cpp  IMGUIWindow.cpp
SourceCode/src/Math/: Matrix4X4f.cpp  MollerTrumboreInteraction.cpp  Quaternion.cpp  Transform.cpp  Vector3f.cpp
SourceCode/src/OpenXR/: OpenXRAPIManager.cpp  OpenXRApplication.cpp  OpenXRConfig.cpp  OpenXRGraphicsSystem.cpp  OpenXRSpaceComponent.cpp  OpenXRSwapchain.cpp  OpenXRViewSpaceComponent.cpp  OpenXRVulkanManager.cpp
UnitTest/Android/: build.gradle  gradle.properties  settings.gradle
UnitTest/Android/unittest_androidapp/: CMakeLists.txt  build.gradle
UnitTest/Android/unittest_featuredeveloping/: CMakeLists.txt  build.gradle
UnitTest/Android/wavevrapp/: CMakeLists.txt  build.gradle
UnitTest/Android/wavevrapp/src/main/: AndroidManifest.xml
UnitTest/Android/wavevrapp/src/main/cpp/: WaveCommonFunction.h  WaveSystem.cpp  WaveSystem.h  WaveVRApplication.cpp  WaveVRApplication.h  WaveVRControllerComponent.cpp  WaveVRControllerComponent.h  WaveVREventArg.cpp  WaveVREventArg.h  WaveVRSwapchain.cpp  WaveVRSwapchain.h  WaveVRVulkanManager.cpp  WaveVRVulkanManager.h  android_jni_main.cpp
UnitTest/Android/wavevrapp/src/main/java/com/sdengine/wavevrapp/: MainActivity.java
UnitTest/Android/wavevrapp/src/main/res/values/: strings.xml
UnitTest/Windows/UnitTest_CommonFunc/: UnitTest_CommonFunc.vcxproj  main.cpp
UnitTest/Windows/UnitTest_ECSSystem/: UnitTest_ECSSystem.vcxproj  main.cpp
UnitTest/Windows/UnitTest_EventSlotSystem/: UnitTest_EventSlotSystem.vcxproj  UnitTest_EventSlotSystem.vcxproj.filters  main.cpp
UnitTest/Windows/UnitTest_FeatureDeveloping/: CommandRecordingThread.cpp  FeatureApplication.cpp  FeatureApplication.h  UnitTest_FeatureDeveloping.vcxproj  UnitTest_FeatureDeveloping.vcxproj.filters  main.cpp
UnitTest/Windows/UnitTest_FileSystem/: UnitTest_FileSystem.vcxproj  main.cpp
UnitTest/Windows/UnitTest_GLFWAppilcation/: UnitTest_GLFWAppilcation.vcxproj  main.cpp
UnitTest/Windows/UnitTest_LogManager/: UnitTest_LogManager.vcxproj  main.cpp
UnitTest/Windows/UnitTest_MathTest/: UnitTest_MathTest.vcxproj  main.cpp
UnitTest/Windows/UnitTest_SharedAndWeakPtr/: UnitTest_SharedAndWeakPtr.vcxproj  main.cpp
UnitTest/Windows/UnitTest_WindowsApplication/: UnitTest_WindowsApplication.vcxproj  UnitTest_WindowsApplication.vcxproj.filters  WindowsApplication.cpp  WindowsApplication.h  main.cpp
UnitTest_GraphicsAPI/Android/: settings.gradle
UnitTest_GraphicsAPI/Android/Key/: SDSample.jks
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/: CMakeLists.txt  build.gradle
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/src/main/: AndroidManifest.xml
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/src/main/assets/Shader/: MainShader.vert  MainShader.vert.spv  PhongShader.frag  ScreenShader.frag
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/src/main/assets/resources/models/Build11_fbx/: Build11_fbx.fbx
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/src/main/assets/resources/models/Building02/: Building02_m.fbx
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/src/main/cpp/: TestAndroidApplication.cpp  TestAndroidApplication.h  android_jni_main.cpp
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/src/main/java/com/sdengine/unittest_graphicsapi/: MainActivity.java
UnitTest_GraphicsAPI/Android/unittest_graphicsapi/src/main/res/values/: strings.xml
UnitTest_GraphicsAPI/Windows/UnitTest_VulkanAPI/: Sample.cpp  Sample.h  Sample1_DrawTriangle.cpp  Sample1_DrawTriangle.h  Sample2_DrawScene.cpp  Sample2_DrawScene.h  Sample3_MultiSubpass.cpp  Sample3_MultiSubpass.h  UnitTest_VulkanAPI.vcxproj  UnitTest_VulkanAPI.vcxproj.filters  VulkanAPITestManager.cpp  VulkanAPITestManager.h  VulkanTestGLFWApplication.cpp  VulkanTestGLFWApplication.h  main.cpp
(+581 files in other folders)
